2012-09-14  David Edelsohn  <dje.gcc@gmail.com>

	* configure: Regenerate.

2012-09-10  Matthias Klose  <doko@ubuntu.com>

	* config.in: Disable sanity check for kfreebsd.

2012-09-10  H.J. Lu  <hongjiu.lu@intel.com>

	* configure: Regenerated.

2012-09-06  Cary Coutant  <ccoutant@google.com>

	* dwarf.c (decode_location_expression): Add
	DW_OP_GNU_const_index.

2012-09-06  Nick Clifton  <nickc@redhat.com>

	* doc/binutils.texi (nm): Alpha-sort the option descriptions.
	Add description of the --synthetic option.

2012-09-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14493
	* readelf.c (get_symbol_index_type): Check bad section index.

2012-08-24  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* readelf.c (arm_attr_tag_CPU_arch): Update for ARMv8.
	(arm_attr_tag_FP_arch): Likewise.
	(arm_attr_tag_Advanced_SIMD_arch): Likewise.

2012-08-17  Yuri Chornoivan  <yurchor@ukr.net>

	* doc/binutils.texi, * objdump.c, * od-xcoff.c: Typo fixes.

2012-08-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14481
	* Makefile.am (BFDTEST1_PROG): New.
	(TEST_PROGS): Likewise.
	(bfdtest1_DEPENDENCIES): Likewise.
	(noinst_PROGRAMS): Add $(TEST_PROGS).
	* Makefile.in: Regenerated.

	* bfdtest1.c: New file.

2012-08-13  Ian Bolton  <ian.bolton@arm.com>
	    Laurent Desnogues  <laurent.desnogues@arm.com>
	    Jim MacArthur  <jim.macarthur@arm.com>
	    Marcus Shawcroft  <marcus.shawcroft@arm.com>
	    Nigel Stephens  <nigel.stephens@arm.com>
	    Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
	    Richard Earnshaw  <rearnsha@arm.com>
	    Sofiane Naci  <sofiane.naci@arm.com>
	    Tejas Belagod  <tejas.belagod@arm.com>
	    Yufeng Zhang  <yufeng.zhang@arm.com>

	* readelf.c (guess_is_rela): Handle EM_AARCH64.
	(get_machine_name): Likewise.
	(get_aarch64_segment_type): New function.
	(get_segment_type): Handle EM_AARCH64 by calling the new function.
	(get_aarch64_section_type_name): New function.
	(get_section_type_name): Handle EM_AARCH64 by calling the new function.